src/code-blocks/components/ChoiceGroup.css
.choice-group-container {
  position: relative;

  /* layout */
  --top-position: 10px;
  --border-radius: 5px;
  --transition-select-list-duration: 180ms;
  --transition-select-option-duration: 120ms;
  --transition-select-list: top var(--transition-select-list-duration) cubic-bezier(0.2, 0.9, 0.2, 1), clip-path
    var(--transition-select-list-duration) ease-in-out;
  --transition-select-option: background var(--transition-select-option-duration) ease;
  --transition-select-icon: filter 500ms ease, opacity 500ms ease;

  .choice-group__selects {
    position: absolute;
    display: flex;
    flex-direction: row-reverse;
    gap: 2px;
    top: var(--top-position);
    right: 42px;
  }

  .choice-select__list {
    position: relative;
    font-size: 13.3333px;
    background: transparent;
    height: calc(var(--choice-count) * var(--option-height));
    top: 0;

    -webkit-user-select: none; /* Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE/Edge legacy */
    user-select: none; /* Standard */

    border-radius: var(--border-radius);
    width: 100%;
    transition: var(--transition-select-list);
  }

  .choice-select__border {
    position: absolute;
    left: 0;
    right: 0;
    height: var(--option-height);

    border-style: solid;
    border-width: 1px 2px 2px 1px;
    border-color: hsl(0, 0%, 75%) hsl(0, 0%, 72%) hsl(0, 0%, 72%) hsl(0, 0%, 75%);

    border-radius: var(--border-radius);
    pointer-events: none;

    transition: top var(--transition-select-list-duration) ease-in-out, height var(--transition-select-list-duration)
      ease-in-out;
  }

  .choice-select__option {
    display: flex;
    height: var(--option-height);
    white-space: nowrap;
    align-items: center;
    flex-wrap: nowrap;
    background: #fff;
    padding: 0 6px;
    cursor: pointer;
    transition: var(--transition-select-option);
  }

  .choice-select__option-content {
    display: inline-flex;
    align-items: center;
    gap: 2px;
  }

  .choice-select__option img {
    width: 14px;
    height: 14px;

    filter: grayscale(100%);
    opacity: 0.8;
    transition: var(--transition-select-icon);
  }

  .choice-select__list:hover .choice-select__option img,
  .choice-select__list[aria-expanded='true'] .choice-select__option img {
    filter: grayscale(0%);
    opacity: 1;
  }

  .choice-select__list[aria-expanded='true'] {
    z-index: 1;
    clip-path: inset(0px round var(--border-radius)) !important;
    .choice-select__border {
      top: 0 !important;
      height: calc(var(--choice-count) * var(--option-height));
    }
  }

  .choice-select__option:not(:last-child) {
    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
  }

  .choice-select__option:hover {
    background: #f5f5f5;
  }

  .choice-select__option:has(.choice-select__radio:checked) {
    background: #eee;
  }

  .hidden {
    display: none !important;
  }

  .choice-select__list:has(.choice-select__option:nth-of-type(1) .choice-select__radio:checked) {
    top: 0;
    clip-path: inset(
      calc(0 * var(--option-height)) 0 calc((var(--choice-count) - 0 - 1) * var(--option-height)) 0 round
        var(--border-radius)
    );
    .choice-select__border {
      top: 0;
    }
  }
  .choice-select__list:has(.choice-select__option:nth-of-type(2) .choice-select__radio:checked) {
    top: calc(-1 * var(--option-height));
    clip-path: inset(
      calc(1 * var(--option-height)) 0 calc((var(--choice-count) - 1 - 1) * var(--option-height)) 0 round
        var(--border-radius)
    );
    .choice-select__border {
      top: var(--option-height);
    }
  }
  .choice-select__list:has(.choice-select__option:nth-of-type(3) .choice-select__radio:checked) {
    top: calc(-2 * var(--option-height));
    clip-path: inset(
      calc(2 * var(--option-height)) 0 calc((var(--choice-count) - 2 - 1) * var(--option-height)) 0 round
        var(--border-radius)
    );
    .choice-select__border {
      top: calc(2 * var(--option-height));
    }
  }
  .choice-select__list:has(.choice-select__option:nth-of-type(4) .choice-select__radio:checked) {
    top: calc(-3 * var(--option-height));
    clip-path: inset(
      calc(3 * var(--option-height)) 0 calc((var(--choice-count) - 3 - 1) * var(--option-height)) 0 round
        var(--border-radius)
    );
    .choice-select__border {
      top: calc(3 * var(--option-height));
    }
  }
  .choice-select__list:has(.choice-select__option:nth-of-type(5) .choice-select__radio:checked) {
    top: calc(-4 * var(--option-height));
    clip-path: inset(
      calc(4 * var(--option-height)) 0 calc((var(--choice-count) - 4 - 1) * var(--option-height)) 0 round
        var(--border-radius)
    );
    .choice-select__border {
      top: calc(4 * var(--option-height));
    }
  }
  .choice-select__list:has(.choice-select__option:nth-of-type(6) .choice-select__radio:checked) {
    top: calc(-5 * var(--option-height));
    clip-path: inset(
      calc(5 * var(--option-height)) 0 calc((var(--choice-count) - 5 - 1) * var(--option-height)) 0 round
        var(--border-radius)
    );
    .choice-select__border {
      top: calc(5 * var(--option-height));
    }
  }
  .choice-select__list:has(.choice-select__option:nth-of-type(7) .choice-select__radio:checked) {
    top: calc(-6 * var(--option-height));
    clip-path: inset(
      calc(6 * var(--option-height)) 0 calc((var(--choice-count) - 6 - 1) * var(--option-height)) 0 round
        var(--border-radius)
    );
    .choice-select__border {
      top: calc(6 * var(--option-height));
    }
  }
}

.choice-group {
  /* choice visibility logic */
  select:has(option:nth-of-type(1):not(:checked)) ~ .choice:nth-of-type(1),
  select:has(option:nth-of-type(2):not(:checked)) ~ .choice:nth-of-type(2),
  select:has(option:nth-of-type(3):not(:checked)) ~ .choice:nth-of-type(3),
  select:has(option:nth-of-type(4):not(:checked)) ~ .choice:nth-of-type(4),
  select:has(option:nth-of-type(5):not(:checked)) ~ .choice:nth-of-type(5),
  select:has(option:nth-of-type(6):not(:checked)) ~ .choice:nth-of-type(6),
  select:has(option:nth-of-type(7):not(:checked)) ~ .choice:nth-of-type(7) {
    display: none;
  }
}

